--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -14,7 +14,7 @@
 <th:block layout:fragment="content">
     <div class="document-container">
         <form id="frm" name="frm">
-            <div class="document-main flex-column align-items-center">
+            <div class="document-main flex-column align-items-center" style="right: 38.13rem">
                 <div class="document-main-header flex-row justify-content-between align-items-center">
                     <span class="document-numbering" th:text="|#{document.label.docNo} : ${documentNo}|"></span>
                     <div id="btn-area"></div>
@@ -30,7 +30,6 @@
     <script th:src="@{/assets/vendors/tagify/tagify.custom.js}"></script>
     <script type="module">
         /*<![CDATA[*/
-
         import { zFormToken } from "../../assets/js/document/zFormToken.js";
         import { zFormButton } from "../../assets/js/document/zFormButton.js";
         import { SESSION } from '../../assets/js/lib/zConstants.js';
@@ -45,37 +44,50 @@
             mobileNumber: '[[${#authentication.details.mobileNumber}]]'
         };
         Object.assign(SESSION, userSession);
-        let tokenListModal;
-        window.onload = function () {
-            // 아래 URL 은 추후에 '/rest/tokens/' + '[[${tokenId}]]' + '/data' 로 수정해야 함.
-            aliceJs.fetchJson('/assets/js/document/token_test.json', {
-                method: 'GET'
-            }).then((formData) => {
-                zFormToken.init(document.getElementById('document-panel'), formData);
-                zFormButton.init(document.getElementById('btn-area'), formData, zFormToken);
-                this.instanceId = zForm
-            });
+        let tokenListModal, instanceId;
 
-            OverlayScrollbars(document.querySelectorAll('.list-wrap'), {className: 'scrollbar'});
+        // 아래 URL 은 추후에 '/rest/tokens/' + '[[${tokenId}]]' + '/data' 로 수정해야 함.
+        aliceJs.fetchJson('/assets/js/document/token_test.json', {
+            method: 'GET'
+        }).then((formDataJson) => {
+            if (formDataJson.instanceId) {
+                addIdComponent('instanceId', formDataJson.instanceId);
+            }
 
-            let instanceId = document.getElementById('instanceId').getAttribute('data-id');
-            let tokenId = document.getElementById('tokenId').getAttribute('data-id');
-            // 프린트 페이지일 경우,
-            if (document.querySelector('.token-properties') === null) { return false; }
+            if (formDataJson) {
+                addIdComponent('tokenId', formDataJson.tokenId);
+            }
 
-            // 탭 정보들 조회하여 셋팅.
+            zFormToken.init(document.getElementById('document-panel'), formDataJson);
+            zFormButton.init(document.getElementById('btn-area'), formDataJson, zFormToken);
+        });
+        OverlayScrollbars(document.querySelectorAll('.list-wrap'), {className: 'scrollbar'});
+        /*]]>*/
+    </script>
+    <script type="text/javascript">
+        // 탭 정보들 조회하여 셋팅.
+        window.onload = function() {
+            tabInit();
+        }
+
+        /**
+         * 토큰 탭 화면 초기화
+         */
+        function tabInit() {
             aliceJs.sendXhr({
                 method: 'GET',
                 url: '/tokens/' + '[[${tokenId}]]' + '/edit-tab',
                 async: false,
-                showProgressbar: true,
+                showProgressbar: false,
                 callbackFunc: function (response) {
+                    instanceId = document.getElementById('instanceId').getAttribute('data-id');
                     if (document.querySelector('.token-properties').children) {
                         document.querySelector('.token-properties').remove();
                         let tokenInfo = document.createElement('div');
                         tokenInfo.className = 'token-properties';
                         document.querySelector('.document-container').append(tokenInfo);
                     }
+
                     document.querySelector('.token-properties').innerHTML = response.responseText;
 
                     // 탭 정보에 이벤트를 등록
@@ -84,8 +96,8 @@
                             // 탭 동작
                             Array.prototype.filter.call(e.target.parentNode.children, function (child) {
                                 return child !== e.target;
-                            }).forEach((sblingEle) => {
-                                sblingEle.classList.remove('active');
+                            }).forEach((siblingElement) => {
+                                siblingElement.classList.remove('active');
                             });
                             e.target.classList.add('active');
                             // 컨텐츠 내용 동작
@@ -93,8 +105,8 @@
                             if (targetElement != null) {
                                 Array.prototype.filter.call(targetElement.parentNode.children, function (child) {
                                     return child !== targetElement;
-                                }).forEach((sblingEle) => {
-                                    sblingEle.style.display = 'none';
+                                }).forEach((siblingElement) => {
+                                    siblingElement.style.display = 'none';
                                 });
                                 targetElement.style.display = 'block';
                             }
@@ -121,7 +133,7 @@
                         suggestion: true,
                         realtime: true,
                         tagType: 'instance',
-                        targetId: document.getElementById('instanceId').getAttribute('data-id')
+                        targetId: instanceId
                     })
                     const selectedTab = sessionStorage.getItem('token-info-tab') ? sessionStorage.getItem('token-info-tab') : 'token-history';
                     document.querySelector('h4[data-target-contents="' + selectedTab + '"]').click();
@@ -130,9 +142,162 @@
                     for (let i = 0; i < tokenActionEle.length; i++) {
                         tokenActionEle[i].textContent = i18n.msg(tokenActionEle[i].textContent);
                     }
+                    OverlayScrollbars(document.querySelectorAll('.list-wrap'), {className: 'scrollbar'});
                 }
             });
-        };
+        }
+
+        /**
+         * Comment Object.
+         *
+         * @param instanceId
+         */
+        function addCommentBox(instanceId) {
+            let commentContainer = document.getElementById('comment-container');
+            if (commentContainer !== null) {
+
+                let commentBoxTextarea = document.createElement('textarea');
+                commentBoxTextarea.id = 'commentValue';
+                commentBoxTextarea.setAttribute('placeholder', i18n.msg('comment.msg.enterComments'));
+                commentBoxTextarea.className = 'textarea-scroll-wrapper';
+                let commentButton = document.createElement('button');
+                commentButton.type = 'button';
+                commentButton.innerText = i18n.msg('common.btn.register');
+                commentButton.classList.add('default-line');
+                commentButton.addEventListener('click', function () {
+                    // 유효성 검증
+                    if (isEmpty('commentValue', 'comment.msg.enterComments')) { return false; }
+                    saveComment(instanceId, commentBoxTextarea.value);
+                });
+
+                commentContainer.appendChild(commentBoxTextarea);
+                commentContainer.appendChild(commentButton);
+
+                OverlayScrollbars(commentContainer.querySelector('textarea'), {
+                    className: 'inner-scrollbar',
+                    resize: 'vertical',
+                    sizeAutoCapable: true,
+                    textarea: {
+                        dynHeight: false,
+                        dynWidth: false,
+                        inheritedAttrs: 'class'
+                    }
+                });
+            }
+        }
+
+        function openProcessStatusPopUp() {
+            window.open('/process/[[${instanceId}]]/status', 'process_status_[[${instanceId}]]', 'width=1300, height=500');
+        }
+
+        function openTokenEdit(tokenId) {
+            const _width = 1500, _height = 920;
+            const _left = Math.ceil((window.screen.width - _width) / 2);
+            const _top = Math.ceil((window.screen.height - _height) / 4);
+            window.open('/tokens/' + tokenId + '/view', 'token_' + tokenId, 'width=' + (screen.width - 50) + ', height=' + (screen.height - 150) + ', left=' + _left + ', top=' + _top);
+        }
+
+        /**
+         * Save Comment.
+         *
+         * @param instanceId
+         * @param comment
+         */
+        function saveComment(instanceId, comment) {
+            let data = {
+                instanceId: instanceId,
+                content: comment
+            };
+            const opt = {
+                method: 'POST',
+                url: '/rest/comments',
+                params: JSON.stringify(data),
+                contentType: 'application/json',
+                callbackFunc: function(xhr) {
+                    if (xhr.responseText) {
+                        tabInit();
+                    } else {
+                        aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
+                    }
+                }
+            };
+            aliceJs.sendXhr(opt);
+        }
+
+        /**
+         * id Component 를 만든다. (document, token)
+         *
+         * @param v_kind 분류, data : id 값
+         * @param v_data id
+         */
+        function addIdComponent(v_kind, v_data) {
+            const comp = document.createElement('div');
+            comp.id = v_kind;
+            comp.setAttribute('data-id', v_data);
+            document.getElementById('document-panel').appendChild(comp);
+        }
+
+        // 관련문서 모달
+        function openRelatedToken() {
+            tokenListModal = new modal({
+                title: i18n.msg('token.label.relatedInstance'),
+                body: createModalContent(),
+                classes: 'token-list',
+                buttons: [{
+                    content: i18n.msg('common.btn.select'),
+                    classes: "point-fill",
+                    bindKey: false,
+                    callback: function() {
+                        saveTokenList();
+                    }
+                },{
+                    content: i18n.msg('common.btn.cancel'),
+                    classes: "default-line",
+                    bindKey: false,
+                    callback: function(modal) {
+                        modal.hide();
+                    }
+                }],
+                close: {
+                    closable: false,
+                },
+                onCreate: function() {
+                    document.getElementById('search').addEventListener('keyup', function() {
+                        getInstanceList(this.value, false);
+                    });
+                    getInstanceList(document.getElementById('search').value, true);
+                }
+            });
+            tokenListModal.show();
+        }
+
+        // 관련 문서 모달 내부 Template
+        function createModalContent() {
+            return `<div class="related-instance-list">` +
+                `<input class="search col-5 mr-2" type="text" name="search" id="search" maxlength="100" placeholder="${i18n.msg('token.label.relatedInstancePlaceholder')}"/><span id="spanTotalCount" class="search-count"></span>` +
+                `<div class="table-set" id="instanceList"></div>` +
+                `</div>`;
+        }
+
+        // 관련문서 추가
+        function saveTokenList() {
+            let checked = document.querySelectorAll('input[name=chk]:checked');
+            if (checked.length === 0) {
+                aliceAlert.alertWarning(i18n.msg('token.msg.selectToken'));
+            } else {
+                let jsonArray = [];
+                for (let i = 0; i < checked.length; i++) {
+                    let jsonObject = {};
+                    jsonObject.folderId = '[[${folderId}]]';
+                    jsonObject.instanceId = checked[i].value;
+                    jsonArray.push(jsonObject);
+                }
+                restSubmit('POST', '/rest/folders', function() {
+                    aliceDocument.createTokenInfoTab();
+                    tokenListModal.hide();
+                }, jsonArray, true);
+            }
+        }
 
         function getInstanceList(search, showProgressbar) {
             restSubmit('get', '/tokens/view-pop/documents?searchValue=' + search.trim() + '&tokenId=' + '[[${tokenId}]]', function(result) {
@@ -149,80 +314,6 @@
             }, null, showProgressbar);
         }
 
-        // 관련문서 추가
-        function saveTokenList() {
-            let checked = document.querySelectorAll('input[name=chk]:checked');
-            if (checked.length === 0) {
-                aliceAlert.alertWarning(i18n.msg('token.msg.selectToken'));
-                return;
-            } else {
-                let jsonArray = new Array();
-                for (let i = 0; i < checked.length; i++) {
-                    let jsonObject = new Object();
-                    jsonObject.folderId = '[[${folderId}]]';
-                    jsonObject.instanceId = checked[i].value;
-                    jsonArray.push(jsonObject);
-                }
-                restSubmit('POST', '/rest/folders', function() {
-                    aliceDocument.createTokenInfoTab();
-                    tokenListModal.hide();
-                }, jsonArray, true);
-            }
-        }
-
-        // 관련 문서 모달 내부 Template
-        function createModalContent(data) {
-            return `<div class="related-instance-list">` +
-                       `<input class="search col-5 mr-2" type="text" name="search" id="search" maxlength="100" placeholder="${i18n.msg('token.label.relatedInstancePlaceholder')}"/><span id="spanTotalCount" class="search-count"></span>` +
-                       `<div class="table-set" id="instanceList"></div>` +
-                    `</div>`;
-        }
-
-        // 관련문서 모달
-        function openRelatedToken(tokenId, search) {
-            tokenListModal = new modal({
-                title: i18n.msg('token.label.relatedInstance'),
-                body: createModalContent(),
-                classes: 'token-list',
-                buttons: [{
-                    content: i18n.msg('common.btn.select'),
-                    classes: "point-fill",
-                    bindKey: false,
-                    callback: function(modal) {
-                        saveTokenList();
-                    }
-                },{
-                    content: i18n.msg('common.btn.cancel'),
-                    classes: "default-line",
-                    bindKey: false,
-                    callback: function(modal) {
-                        modal.hide();
-                    }
-                }],
-                close: {
-                    closable: false,
-                },
-                onCreate: function(modal) {
-                    document.getElementById('search').addEventListener('keyup', function() {
-                        getInstanceList(this.value, false);
-                    });
-                    getInstanceList(document.getElementById('search').value, true);
-                }
-            });
-            tokenListModal.show();
-        }
-
-        function openProcessStatusPopUp() {
-            window.open('/process/[[${instanceId}]]/status', 'process_status_[[${instanceId}]]', 'width=1300, height=500');
-        }
-
-        function openTokenEdit(tokenId) {
-            const _width = 1500, _height = 920;
-            const _left = Math.ceil((window.screen.width - _width) / 2);
-            const _top = Math.ceil((window.screen.height - _height) / 4);
-            window.open('/tokens/' + tokenId + '/view', 'token_' + tokenId, 'width=' + (screen.width - 50) + ', height=' + (screen.height - 150) + ', left=' + _left + ', top=' + _top);
-        }
-
         function restSubmit(method, url, result, data, showProgressbar) {
             const opt = {
                 method: method,
@@ -236,8 +327,6 @@
             };
             aliceJs.sendXhr(opt);
         }
-
-        /*]]>*/
     </script>
 </th:block>
 </html>
