--- a/src/main/resources/public/scss/template/_variables.scss
+++ b/src/main/resources/public/scss/template/_variables.scss
@@ -533,3 +533,5 @@ $tag-invalid-color:                          hexToRGBA($red, 0.7); // $red , 불
 $tag-invalid-bg-color:                       hexToRGBA($red, 0.1); // $red , 불투명도 10
 $tag-invalid-border-color:                   #FFE2E6;
 
+////////////////////////////// input box /////////////////////////////
+$input-clear-right:                          0rem;
