--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -1278,6 +1278,9 @@ label {
   border-color: #0098FF;
 }
 
+.input-button {
+  position: relative;
+}
 .input-button input[type=text] {
   margin: 0;
   border-top-right-radius: 0;
@@ -1349,6 +1352,44 @@ label {
 }
 .z-input.success {
   border: 0.0625rem solid #76BD26;
+}
+.z-input-clear {
+  position: absolute;
+  right: 0rem;
+  padding: 1.125rem 0.875rem;
+  width: 0.625rem;
+  height: 0.625rem;
+  -webkit-mask-image: url("../media/icons/icon_clear.svg");
+  mask-image: url("../media/icons/icon_clear.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #8B9094;
+}
+.z-input-button {
+  position: relative;
+  height: 2.25rem;
+}
+.z-input-button input[type=text] {
+  margin: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.z-input-button input[type=text]:focus, .z-input-button input[type=text]:hover {
+  z-index: 25;
+}
+.z-input-button button {
+  margin-left: -0.0625rem;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.z-input-button button:focus, .z-input-button button:hover, .z-input-button button:active {
+  z-index: 25;
+}
+.z-input-button .z-input-clear {
+  position: absolute;
+  right: calc(0rem + 5rem);
 }
 
 /* _print.scss 
