--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -703,6 +703,7 @@ label {
     border-color: $gray400;
     border-style: none none none solid;
     @include borderRadius(0);
+    background-color: $white;
     pointer-events: none;
     cursor: default;
   }
@@ -724,14 +725,22 @@ label {
   }
 
   &-clear {
-    @include absolute($right: $input-clear-right);
-    padding: 1.125rem 0.875rem; // 18px 14px
-    @include maskImage('#{$icon-folder-path}icon_clear.svg', 0.625rem, 0.625rem, no-repeat, center, null, $gray500); // 10px 10px
+    position: relative;
+    display: inline-block;
+
+    input { width: 100%; }
+
+    .clear-button {
+      @include absolute($right: $input-clear-right);
+      padding: 1.125rem 0.875rem; // 18px 14px
+      @include maskImage('#{$icon-folder-path}icon_clear.svg', 0.625rem, 0.625rem, no-repeat, center, null, $gray500); // 10px 10px
+    }
   }
 
   // todo: 임시로 추가. 추후 z-input 모두 적용 시 제거 예정.
   &-button {
     position: relative;
+    display: inherit;
     height: 2.25rem; // 36px
 
     input[type='text'] {
@@ -756,7 +765,7 @@ label {
       }
     }
 
-    .z-input-clear {
+    .clear-button {
       @include absolute($right: calc(#{$input-clear-right} + 5rem));
     }
   }
