--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1286,6 +1286,7 @@ label {
   border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
+  background-color: #FFFFFF;
   pointer-events: none;
   cursor: default;
 }
@@ -1303,6 +1304,13 @@ label {
   border: 0.0625rem solid #76BD26;
 }
 .z-input-clear {
+  position: relative;
+  display: inline-block;
+}
+.z-input-clear input {
+  width: 100%;
+}
+.z-input-clear .clear-button {
   position: absolute;
   right: 0rem;
   padding: 1.125rem 0.875rem;
@@ -1318,6 +1326,7 @@ label {
 }
 .z-input-button {
   position: relative;
+  display: inherit;
   height: 2.25rem;
 }
 .z-input-button input[type=text] {
@@ -1336,7 +1345,7 @@ label {
 .z-input-button button:focus, .z-input-button button:hover, .z-input-button button:active {
   z-index: 25;
 }
-.z-input-button .z-input-clear {
+.z-input-button .clear-button {
   position: absolute;
   right: calc(0rem + 5rem);
 }
