#10706 시스템관리의 역할 메뉴 데이터 클릭시 전체 처리 현상 (깜빡임) -> 오류 수정 진행

--- a/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
+++ b/src/main/resources/public/template/numbering-pattern/numberingPatternEdit.html
@@ -153,6 +153,7 @@
             const opt = {
                 method: 'get',
                 url: '/rest/numberingPatterns/' + encodeURIComponent(patternName),
+                showProgressbar: false,
                 callbackFunc: function (response) {
                     let responseJson = JSON.parse(response.responseText);
                     document.getElementById('txtPatternId').value = responseJson.patternId;
