--- a/src/main/resources/public/template/image/imageList.html
+++ b/src/main/resources/public/template/image/imageList.html
@@ -153,7 +153,7 @@
         }
 
         function removeImage(imgObj) {
-            aliceAlert.confirmIcon(i18n.msg('common.msg.confirmDelete'), () => {
+            aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), () => {
                 aliceJs.sendXhr({
                     url: '/rest/images/' + imgObj.dataset.name,
                     method: 'delete',
@@ -243,7 +243,7 @@
                         location.reload();
                     });
                 } else {
-                    aliceAlert.confirmIcon(
+                    aliceAlert.confirm(
                         i18n.msg('image.msg.existNotAllowedExtension'),
                         uploadImage, // OK 시 업로드
                         () => document.getElementById('image-upload-file').value = ''  // CANCEL 시 file object 값 비움 처리
