--- a/src/main/resources/public/scss/portal/_variables.scss
+++ b/src/main/resources/public/scss/portal/_variables.scss
@@ -1,7 +1,7 @@
 //////////////////////////// layout ////////////////////////////
 // header
 $layout-header-height:                       3.125rem; // 50px
-$layout-header-font-size:                    $font-size-base;
+$layout-header-font-size:                    $font-size-s;
 $layout-header-font-color:                   $white;
 $layout-header-font-weight:                  $font-weight-medium;
 $layout-header-bg-color:                     $blue;
@@ -41,11 +41,11 @@ $view-title-font-size:                1.125rem; // 18px
 $view-title-font-weight:              $font-weight-medium;
 $view-title-font-color:               map-get($blacks, "light");
 
-$view-sub-title-font-size:            $font-size-base; // 16px
+$view-sub-title-font-size:            $font-size-s; // 16px
 $view-sub-title-font-weight:          $font-weight-regular;
 $view-sub-title-font-color:           map-get($grays, "dark");
 
-$view-content-font-size:              $font-size-base; // 16px
+$view-content-font-size:              $font-size-s; // 16px
 $view-content-font-weight:            $font-weight-regular;
 $view-content-font-color:             map-get($grays, "dark");
 //////////////////////////// faq ////////////////////////////
