--- a/src/main/resources/public/scss/process/_variables.scss
+++ b/src/main/resources/public/scss/process/_variables.scss
@@ -1,7 +1,7 @@
 //////////////////////////// layout ////////////////////////////
 // header
 $layout-header-height:                       3.125rem; // 50px
-$layout-header-font-size:                    $font-size-base;
+$layout-header-font-size:                    $font-size-s;
 $layout-header-font-color:                   $white;
 $layout-header-font-weight:                  $font-weight-medium;
 $layout-header-bg-color:                     $blue;
@@ -46,7 +46,7 @@ $simulation-report-content-font-color:       map-get($grays, "dark");
 
 // process properties header
 $layout-properties-header-height:            2.5rem; // 40px
-$layout-properties-header-font-size:         $font-size-base;
+$layout-properties-header-font-size:         $font-size-s;
 $layout-properties-header-font-color:        $white;
 $layout-properties-header-font-weight:       $font-weight-medium;
 $layout-properties-header-bg-color:          map-get($blues, "hover");
@@ -58,13 +58,13 @@ $layout-properties-border:                    0.0625rem solid map-get($grays, "l
 $layout-properties-box-shadow:                -0.0625rem 0.9375rem 0.4375rem 0 hexToRGBA(map-get($grays, 'pressed'), 0.15);// -1px 15px 7px 0px $pressed-gray, 불투명도 15%;
 
 // 세부 속성명
-$properties-title-font-size:                  $font-size-base; // 16px
+$properties-title-font-size:                  $font-size-s; // 16px
 $properties-title-font-weight:                $font-weight-medium;
 $properties-title-font-color:                 map-get($blacks, "light");
 
 // clipboard tooltip
 // ID 복사하는 용도 > _tooltip.scss에 정의되어 있음
-$clipboard-tooltip-font-size:                 $font-size-base; // 16px
+$clipboard-tooltip-font-size:                 $font-size-xs; // 14px
 $clipboard-tooltip-font-weight:               $font-weight-regular;
 $clipboard-tooltip-font-color:                $blue;
 $clipboard-tooltip-bg-color:                  $white;
@@ -78,7 +78,7 @@ $clipboard-tooltip-border-radius:             0.0625rem; // 1px
 $table-border-color:                          map-get($grays, "line");
 
 // element
-$node-font-size:                              $font-size-base; // 16px
+$node-font-size:                              $font-size-s; // 16px
 $node-font-weight:                            $font-weight-medium;
 $node-font-color:                             map-get($blacks, "light");
 $node-width:                                  1; // 두께
