--- a/src/main/resources/public/scss/template/_tag.scss
+++ b/src/main/resources/public/scss/template/_tag.scss
@@ -281,7 +281,7 @@
   @include borderRadius(3.125rem); // 50px
   order: 5;
   cursor: pointer;
-  font-family: $font-family;
+  font-family: $font-family-m;
   font-size: 1.25rem; // 20px
   font-weight: $font-weight-bold;
   color: $tag-btn-remove-color;
@@ -433,7 +433,7 @@
     @include absolute(50%, 0, 0, null);
     height: 0.5rem; // 8px
     opacity: 0.5;
-    font-family: $font-family;
+    font-family: $font-family-m;
     line-height: 0.5rem; // 8px
     pointer-events: none;
     @include transform(translate(-150%, -50%) scaleX(1.2) rotate(90deg));
