--- a/src/main/resources/public/scss/template/_text-editor.scss
+++ b/src/main/resources/public/scss/template/_text-editor.scss
@@ -10,7 +10,7 @@
     outline: none !important;
   }
   &.ql-snow {
-    font-family: $font-family;
+    font-family: $font-family-m;
     @include border($text-editor-border-width, solid, $text-editor-border-color, all);
     background-color: $text-editor-bg-color;
     padding: 0;
@@ -231,7 +231,7 @@
 }
 .ql-container {
   &.ql-snow {
-    font-family: $font-family;
+    font-family: $font-family-m;
     font-size:  $text-editor-font-size;
     font-weight:  $text-editor-font-weight;
     line-height: $text-editor-line-height;
