--- a/src/main/resources/public/scss/template/_tree.scss
+++ b/src/main/resources/public/scss/template/_tree.scss
@@ -8,7 +8,7 @@
 // Level 1
 // -------------------------
 ul.tree {
-  font-family: $font-family;
+  font-family: $font-family-m;
   font-size:  $tree-font-size;
   font-weight:  $tree-font-weight;
   color: $tree-font-color;
@@ -118,7 +118,7 @@ span.modal_node_selected,{
 // 트리 전용 모달
 .tree-container {
   @include relative();
-  font-family: $font-family;
+  font-family: $font-family-m;
   margin: 1.875rem 2.5rem; // 30px 40px
 
   .tree-title {
